--- a/ejemplo_tp/TP.tex
+++ b/ejemplo_tp/TP.tex
@@ -31,7 +31,7 @@
 \subsection{grandesCiudades}
 \begin{proc}{grandesCiudades}{\In ciudades : \TLista{Ciudad}}{\TLista{Ciudad}}
     \requiere{True}
-    \asegura{\paraTodo[unalinea]{x}{Ciudad}{x \in res \implica x \in ciudades \land x.habitantes > 50000 }}
+    \asegura{\paraTodo[unalinea]{x}{Ciudad}{x \in res \iff x \in ciudades \land x.habitantes > 50000 }}
 \end{proc}
 
 
@@ -103,238 +103,112 @@
 \pred{todosNoNegativos}{m: \TLista{\TLista{\ent}}}{\paraTodo[unalinea]{s}{\TLista{\ent}}{s \in m \implica (\paraTodo[unalinea]{n}{\ent}{n \in s \implica n \geq 0)}}}
 
 \section{Demostraciones de correctitud}
+\subsection{}
+Para demostrar que la implementación es correcta respecto con respecto de la especificación, debemos probar la validez de la tripla de Hoare  \{P\}S\{Q\}, donde P es la precondición del programa, S el programa y Q la postcondición. La tripla de Hoare es válida sii:\\
+$\{P\}S\{Q\} \iff P \implica wp(S,Q)$\\
+Para eso probaremos:
+\begin{enumerate}
+    \item P \implica wp($S_1;S_2, P_c$)
+    \item[] Donde $S_1;S_2$ son las instrucciones previas al inicio del ciclo, y $P_c$ es la precondición del mismo.
+    \item $P_c$ \implica wp(while...,$Q_c$)
+    \item[] Donde $Q_c$ es la postcondición del ciclo.
+    \item $Q_c$ \implica wp($S_3$,Q)
+    \item[] Donde $S_3$ es la instrucción posterior al ciclo. Como en este caso, el programa termina con el fin del ciclo, probaremos $Q_c$ \implica Q.
+\end{enumerate}
+Por monotonía, esto nos permite demostrar que P \implica wp(S,Q) es verdadera. Definimos precondición, postcondición del ciclo, invariante y función variante para la demostración.\\
+\begin{eqnarray}
+    Q_c &\equiv& \{res = \small \displaystyle \sum_{j=0}^{|ciudades|-1} ciudades[j].habitantes \ \land \ i = |ciudades|\} \notag \\
+    P_c &\equiv& \{res=0 \land i=0 \} \notag \\
+    I &\equiv& \{ 0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes)\} \notag \\
+    Q &\equiv& \{res = \sum\limits_{j=0}^{|ciudades| - 1} ciudades[j].habitantes\} \notag \\
+    P &\equiv& \{ \existe[unalinea]{j}{\ent}{0 \leq j < |ciudades| \yLuego ciudades[j].habitantes > 50.000} \land \notag \\
+    & & \paraTodo[unalinea]{j}{\ent}{0 \leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}
+    \ \land \notag \\ & & \paraTodo[unalinea]{k, h}{\ent}{0 \leq k < h < |ciudades| \implicaLuego ciudades[k].nombre \neq ciudades[h].nombre} \} \notag \\
+    B &\equiv& \{ i < |ciudades| \} \notag \\
+    fv &=& |ciudades| - i \notag
+\end{eqnarray}
+\item 1) Comenzamos probando P \implica $wp(S_1;S_2, P_c$)\\
+\begin{eqnarray}
+    wp(S_1;S_2, P_c) &\overset{Ax3}{\equiv}& wp(S_1; wp(S_2,\ P_c))  \notag \\
+    &\equiv& wp(res:= 0, wp(i:=0,(res = 0 \land i = 0)) \notag \\
+    &\overset{Ax1}{\equiv}& wp(res:= 0,def(0) \yLuego P_c_{0}^{i}) \notag \\
+    &\equiv& wp(res:= 0, True \ \yLuego \ res + 0 \land 0 =0) \notag \\
+    &\equiv& wp(res:=0, res = 0 \land True) \notag \\
+    \item q = \{res = 0\} \notag \\
+    &\overset{Ax1}{\equiv}& def(0) \yLuego q_{0}^{res} \notag \\
+    &\equiv& True \yLuego (0 = 0) \notag \\
+    &\equiv& True \land True \notag \\
+    wp(S_1;S_2, P_c) &\equiv& True \notag 
+\end{eqnarray}
+Si vemos la implicación: 
+$ P \implica wp(S_1;S_2, P_c) \equiv P \implica True \equiv True$\\
 
-% Defino las variables aca para reutilizar mas adelante
-\newcommand{\invariante}[1]{0 \leq #1 \leq |ciudades| \yLuego res = \sum\limits_{j=0}^{#1 - 1} ciudades[j].habitantes}
+ \item 3) Continuamos probando $Q_c$ \implica Q\\
+ Es clara la implicancia pues la postocndición del ciclo y del programa son idénticas.\\
+ 
+ \item 2) Finalmente, para probar $P_c$ \implica wp(while...,$Q_c$), se debe demostrar la correctitud del ciclo mediante Teorema del Invariante, y la terminación del mismo mediante el Teo. de Terminación.\\
+ Teorema del Invariante \\
+ \begin{itemize}
+    \item[a.] $P_c \implica I$ 
+    \item[b.] $\{I \land B\}S_c\{I\}$
+    \item[c.]  $I \land \neg B \implica Q_c$
+\end{itemize}
+\item a. Como queremos analizar la implicación, podemos asumir el antecedente verdadero.\\
+\{$res=0 \ \land \ i=0 \} \implica  \{0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes)$ \}
 
-\subsection{Introducción}
+$P_c \implica 0 \leq \textcolor{blue}{0} \leq |ciudades| \ \yLuego \ (\textcolor{blue}{0} = \small \displaystyle \sum_{j=0}^{\textcolor{blue}{0}-1} ciudades[j].habitantes) \equiv 0 \leq 0 \leq |ciudades| \yLuego (0 = \displaystyle \sum_{j=0}^{-1} ciudades[j].habitantes)$\\
+Como $0 \leq 0 \equiv True$, y la sumatoria de un rango vacío es 0: \\
+\equiv \ $P_c \implica 0 \leq |ciudades| \yLuego (0=0)$ \\
+Como la longitud de una secuencia siempre es 0 o mayor:\\
+\equiv \ $P_c \implica True \land True \equiv \ $P_c \implica True \equiv \  True$ \\
 
-Para demostrar la correctitud del programa en base a la especificación, se utilizará la lógica de la tripla de Hoare:
-\begin{align*}
-    \{P\} S \{Q\}
-    \shortintertext{\parbox{\textwidth}{\centering \textit {\footnotesize {Donde P es la precondición del programa, S el programa y Q la postcondición.}}}}
-\end{align*}
-\indent
-En esta lógica, S es correcto para P y Q si y sólo si P implica la precondicion más débil de S para Q.
-Es decir:
-\begin{align*}
-    \{P\} S \{Q\} \iff P \implica WP(S, Q)
-\end{align*}
-\indent
-Como el programa contiene un ciclo, para simplificar la demostración, se dividirá en tres partes.
-En primer lugar, se comprobará que: 
-\begin{align}
-    P \implica WP(S_{1}, Pc)
-    \label{eq:1}
-    \shortintertext{\parbox{\textwidth}{\centering \textit {\footnotesize {Donde P es la precondición del programa, $S_{1}$ la parte del programa previa al ciclo y Pc la precondición del ciclo.}}}} \notag
-\end{align}
-\indent
-Luego:
-\begin{align}
-    Pc \implica WP(Sc, Qc)
-    \label{eq:2}
-    \shortintertext{\parbox{\textwidth}{\centering \textit {\footnotesize {Donde Pc es la precondición del ciclo, Sc la parte del programa a ejecutar dentro del ciclo y Qc la postcondición del ciclo.}}}} \notag
-\end{align}
-\indent
-Y finalmente:
-\begin{align}
-    Qc \implica WP(S_{2}, Q)
-    \label{eq:3}
-    \shortintertext{\parbox{\textwidth}{\centering \textit {\footnotesize {Donde Qc es la postcondición del ciclo, $S_{2}$ la parte del programa posterior al ciclo y Q la postcondición del programa.}}}} \notag
-\end{align}
-\indent
-Se definen las variables P, Q, Pc, Qc, I, B y la función Fv, que serán utilizadas a lo largo de la demostración:
-\begin{align*}
-    P &= \{ \existe[unalinea]{j}{\ent}{0 \leq i < |ciudades| \yLuego ciudades[j]}\\
-    &\land \paraTodo[unalinea]{j}{\ent}{0 \leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}\\
-    &\land \paraTodo[unalinea]{k, h}{\ent}{0 \leq k < h < |ciudades| \implicaLuego ciudades[k].nombre \neq ciudades[h].nombre} \}\\
-    Q &= \{ res = \sum\limits_{j=0}^{|ciudades| - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-    Pc &= \{ res = 0 \land i = 0 \}\\
-    Qc &= \{ res = \sum\limits_{j=0}^{|ciudades| - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-    I &= \{\invariante{i}\}\\
-    B &= \{ i < |ciudades| \}\\
-    Fv(i) &= |ciudades| - i
-\end{align*}
+\item b. La tripla de Hoare, $\{I \land B\}S_c\{I\}$, es válida si y sólo si $I \land B\ \implica wp(S_c,I)$.El cuerpo del ciclo tiene dos instrucciones, que llamaremos $S_c1$ y $S_c2$.         
+\begin{eqnarray}
+    wp(S_c1;S_c2, P_c) &\overset{Ax3}{\equiv}& wp(S_1; wp(S_2,\ P_c))  \notag \\
+    &\equiv& wp(res:= res + ciudades[i].habitantes, wp(i:= i + 1,I) \notag
+    \end{eqnarray}
+   Calculamos la wp anidada $W_2 = wp(i:= i + 1,I)$
+\begin{eqnarray}
+    wp(i:= i + 1,I) &\overset{Ax1}{\equiv}& wp(res:= 0,def(0) \yLuego P_c_{0}^{i}) \notag \\
+    &\equiv& def(i+1) \yLuego I_{i+1}^{i}) \notag \\
+    &\equiv& (def(i) \land def(1)) \yLuego 0 \leq \textcolor{blue}{i+1} \leq |ciudades| \yLuego \notag \\
+    & & (res = \small \displaystyle \sum_{j=0}^{(\textcolor{blue}{i+1})-1} ciudades[j].habitantes)) \notag \\
+    W_2 &\equiv& -1 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes) \notag
+\end{eqnarray}
+Ahora podemos calcular la wp principal: 
+\begin{eqnarray} 
+    wp($S_c1$,W_2) &\overset{Ax1}{\equiv}& (def(res+ ciudades[i].habitantes) \yLuego W_2_{res+ ciudades[i].habitantes}^{res} \notag \\
+    &\equiv& (def(res) \land def(ciudades) \land def(i)) \yLuego 0 \leq i < |ciudades|  \yLuego \notag \\
+    & & (-1 \leq i \leq |ciudades| \yLuego (\textcolor{blue}{res+ ciudades[i].habitantes} = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes) \notag \\
+    &\equiv& (0 \leq i < |ciudades| \yLuego -1 \leq i \leq |ciudades| \yLuego res = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes - ciudades[i].habitantes) \notag
+\end{eqnarray}
+Como ciudades[i].habitantes es el último término de la sumatoria, podemos reescribirla. Además para el rango de i queda el más fuerte, es decir:  
+\begin{eqnarray} 
+ wp($S_c1$,W_2) &\equiv& (0 \leq i < |ciudades| \yLuego res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes) \notag 
+\end{eqnarray}
+Ahora retomando la implicación, si asumimos el antecedente $I \land B$ cierto: \\
+\begin{itemize}
+    \item \parbox[t]{\textwidth}{$I \land \ B \implica 0 \leq i \leq |ciudades| \land i < |ciudades| \implica 0 \leq i < |ciudades|$}
+    \item \parbox[t]{\textwidth}{La sumatoria está idéntica en I y WP.}
+\end{itemize} 
+Como probamos $I \land B\ \implica wp(S_c,I)$, la tripla de Hoare es válida.\\
 
-\subsection{Demostración}
+\item c. Como queremos analizar la implicación $I \land \neg B \implica Q_c$, podemos asumir el antecedente verdadero. 
+\begin{eqnarray}
+    I \land \neg B &\equiv& 0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes) \land \neg(i<|ciudades|) \\
+    &\equiv& i=|ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes) \notag 
+ \end{eqnarray}
+ (1) $0 \leq i \leq |ciudades| \land \neg(i<|ciudades|)\equiv 0 \leq i \leq |ciudades| \land i\geq |ciudades| \implica i = |ciudades|$\\
+ 
+ Veamos la implicación, reemplazando $i = |ciudades|$:\\
+$ I \land B \implica i = |ciudades| \implica res = \small \displaystyle \sum_{j=0}^{\textcolor{blue}{|ciudades|}-1} ciudades[j].habitantes$\\
+Así, $I \land \neg B \implica Q_c$ es cierto\\ 
+Al haberse probado (a),(b) y (c) queda demostrado que el ciclo es parcialmente correcto respecto la especificación. Ahora, se demuestra la finalización del ciclo.\\
+ \begin{itemize}
+    \item[d.] $\{I \land B \land fv = v_0\}S_c \{fv<v_0\}$ 
+    \item[e.] $I \land fv \leq 0 \implica \neg B$
+\end{itemize}
 
-Comenzamos probando (1):
-\begin{align*}
-    P &\implica WP(res:=0;i:=0, Pc)\\
-    &\qquad\qquad\iff \text{por axioma 3}\\
-    P &\implica WP(res:=0, WP(i:=0, Pc))\\
-    &\qquad\qquad\iff\\
-    P &\implica WP(res:=0, WP(i:=0, \{ res = 0 \land i = 0 \}))\\
-    &\qquad\qquad\iff \text{por axioma 1}\\
-    P &\implica WP(res:=0, \{ def(0) \yLuego  Pc_0^i \})\\
-    &\qquad\qquad\iff\\
-    P &\implica WP(res:=0, \{ def(0) \yLuego  res = 0 \land 0 = 0 \})\\
-    &\qquad\qquad\iff\\
-    P &\implica WP(res:=0, \{ true \yLuego res = 0 \land 0 = 0 \})\\
-    &\qquad\qquad\iff\\
-    P &\implica WP(res:=0, \{ res = 0 \land true \})\\
-    &\qquad\qquad\iff\\
-    P &\implica WP(res:=0, \{ res = 0 \})\\
-    q &= \{ res = 0 \}\\
-    &\qquad\qquad\iff \text{por axioma 1}\\
-    P &\implica WP(res:=0, \{ def(0) \yLuego  q_0^{res} \})\\
-    &\qquad\qquad\iff\\
-    P &\implica \{ true \land 0 = 0 \}\\
-    &\qquad\qquad\iff\\
-    P &\implica \{ true \}\\
-    \shortintertext{\parbox{\textwidth}{\centering \small {Que es tautología, por lo que queda probado.}}} \notag
-\end{align*}
-\indent
-Continuamos con (3):
-\begin{align*}
-    Qc &\implica Q
-    \shortintertext{\parbox{\textwidth}{\centering \small {Es clara la implicancia pues la postcondición del ciclo y la del programa son idénticas.}}} \notag
-\end{align*}
-\indent
-Finalmente (2) se demostrará con la correctitud del ciclo, primero con el teorema del invariante y luego con el teorema de terminación del ciclo.\\
-\indent
-Teorema del invariante:\\
-\begin{align*}
-    &a.\quad Pc \implica I\\
-    &b.\quad \{ I \land B \} \quad Sc \quad \{ I \}\\
-    &c.\quad I \land \neg B \implica Qc\\
-\end{align*}
-\indent
-La proposición (a), se prueba de la siguiente manera:
-\begin{align*}
-    &\{ res = 0 \land i = 0 \} \implica \{\invariante{i}\} \equiv \\
-    \shortintertext{\parbox{\textwidth}{\centering \small {Como se trata de una implicancia analizamos el caso en que el antecedente es verdadero, entonces res = 0 y i = 0 valen para I}}} \notag
-    &\equiv\{ res = 0 \land i = 0 \} \implica \{ \invariante{0} \} \equiv\\
-    \shortintertext{\parbox{\textwidth}{\centering \small {El rango negativo para la sumatoria la reduce a 0}}} \notag
-    &\equiv\{ res = 0 \land i = 0 \} \implica \{ 0 = 0 \leq |ciudades| \yLuego 0 = 0 \} \equiv\\
-    &\equiv\{ res = 0 \land i = 0 \} \implica \{ 0 \leq |ciudades| \yLuego true \} \equiv\\
-    &\equiv\{ res = 0 \land i = 0 \} \implica \{ 0 \leq |ciudades| \} \equiv\\
-    \shortintertext{\parbox{\textwidth}{\centering \small {Como la longitud de ciudades como mínimo es 0, esto también vale}}} \notag
-    &\equiv\{ res = 0 \land i = 0 \} \implica \{ true \} \\
-    \shortintertext{\parbox{\textwidth}{\centering \small {Y finalmente esta expresión es tautología}}} \notag
-\end{align*}
-\indent
-La proposición (b), se prueba de la siguiente manera:
-\begin{align*}
-    \shortintertext{\parbox{\textwidth}{\centering \small {La tripla de Hoare es verdadera si y sólo si}}}
-   \{I \land B \} \implica WP(Sc, I)\\
-     \shortintertext{\parbox{\textwidth}{\centering \small {Se calcula la WP como}}}
-	W_{1} \equiv WP(res := res + ciudades[i].habitantes ; i := i+1 , I)
-	\shortintertext{\parbox{\textwidth}{\centering \small {Por axioma 3 se tiene}}}
-	W_{1} \equiv WP(res := res + ciudades[i].habitantes, WP(i := i+1, I))
-	\shortintertext{\parbox{\textwidth}{\centering \small {Se calcula el WP anidado}}}
-	W_{2} \equiv WP(i := i+1, I))
-	\shortintertext{\parbox{\textwidth}{\centering \small {Por axioma 1}}}
-	W_{2} \equiv \{ def(i+1) \yLuego I_{i+1}^{i} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Luego}}}
-	W_{2} \equiv \{ true \yLuego \invariante{i+1} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Que es equivalente a}}}
-	W_{2} \equiv \{ -1 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Ahora se puede volver a calcular W1, por axioma 1}}}
-	W_{1} \equiv \{ def(res + ciudades[i].habitantes) \yLuego W_{2 res + ciudades[i].habitantes}^{res} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Evaluando}}}
-	W_{1} \equiv \{ 0 \leq i < |ciudades| \yLuego -1 \leq i < |ciudades| \yLuego res + ciudades[i].habitantes = \sum\limits_{j=0}^{i} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Se opera de la siguiente forma}}}
-	W_{1} \equiv \{ 0 \leq i < |ciudades| \yLuego -1 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i} ciudades[j].habitantes - ciudades[i].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Como ciudades[i].habitantes es el ultimo termino de la sumatoria}}}
-	W_{1} \equiv \{ 0 \leq i < |ciudades| \yLuego -1 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i-1} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Ahora, para el rango de i queda el más fuerte, es decir}}}
-	W_{1} \equiv \{ 0 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i-1} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Retomando la implicación de la tripla de Hoare de la proposición (b), ya se puede reemplazar la WP por $W_{1}$}}}
-	\{(\invariante{i}) \land i < |ciudades| \}\\
-	\implica \\
-	\{ 0 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i-1} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {De la misma forma que se operó anteriormente, para el rango de i queda lo más fuerte}}}
-	\{ 0 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i-1} ciudades[j].habitantes \}\\
-	\implica \\
-	\{ 0 \leq i < |ciudades| \yLuego res = \sum\limits_{j=0}^{i-1} ciudades[j].habitantes \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Como ambos términos son iguales, es tautología, por lo que queda probada la tripla de Hoare}}}
-\end{align*}
-\indent
-La proposición (c), se prueba de la siguiente manera:
-\begin{align*}
-    \{ \invariante{i} \land i \geq |ciudades| \}\\
-     \implica \\
-    \{ res = \sum\limits_{j=0}^{|ciudades| - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-     \shortintertext{\parbox{\textwidth}{\centering \small {Se unifica el rango de i que queda como}}} \notag
-     \{ res = \sum\limits_{j=0}^{i - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-     \implica \\
-    \{ res = \sum\limits_{j=0}^{|ciudades| - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Como se trata de una implicancia analizamos el caso en que el antecedente es verdadero, entonces se puede reemplazar $|ciudades|$ por i}}} \notag
-     \{ res = \sum\limits_{j=0}^{i - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-     \implica \\
-    \{ res = \sum\limits_{j=0}^{i - 1} ciudades[j].habitantes \land i = |ciudades| \}\\
-	\shortintertext{\parbox{\textwidth}{\centering \small {Como ambos términos son iguales, es tautología}}}
-\end{align*}
-\indent
-Al haberse probado (a), (b), (c) queda demostrado que el ciclo es parcialmente correcto por el teorema del invariante. Ahora, para terminar de probar (2), se demostará la finalización del ciclo con el teorema de terminación:
-\begin{align*}
-    &d.\quad \{ I \land B \land fv = V_{0} \}\quad Sc \quad\{ fv < V_{0} \} \\
-    &e.\quad \{ I \land fv \leq 0 \} \implica \neg B\\
-\end{align*}
-\indent
-La proposición (d), se prueba de la siguiente manera:
-\begin{align*}
-    \shortintertext{\parbox{\textwidth}{\centering \small {La tripla de Hoare es verdadera si y sólo si}}} \notag
-    \{I \land B \land fv = V_{0} \}\\
-     \implica \\
-     WP(Sc, F)\\
-     \shortintertext{\parbox{\textwidth}{\centering \small {Con F =  \{fv $<$ $V_{0}$\}}}} \notag
-	\shortintertext{\parbox{\textwidth}{\centering \small {Se calcula la WP como}}} \notag
-	W_{1} \equiv WP(res := res + ciudades[i].habitantes ; i := i+1 , F)
-	\shortintertext{\parbox{\textwidth}{\centering \small {Por axioma 3 se tiene}}}
-	W_{1} \equiv WP(res := res + ciudades[i].habitantes, WP(i := i+1, F))
-	\shortintertext{\parbox{\textwidth}{\centering \small {Se calcula el WP anidado}}}
-	W_{2} \equiv WP(i := i+1, F))
-	\shortintertext{\parbox{\textwidth}{\centering \small {Por axioma 1}}}
-	W_{2} \equiv \{ def(i+1) \yLuego F_{i+1}^{i} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Luego}}}
-	W_{2} \equiv \{ true \yLuego |ciudades| - i - 1 < V_{0} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Finalmente}}}
-	W_{2} \equiv \{ |ciudades| - i - 1 < V_{0} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Ahora se puede volver a calcular W1, por axioma 1}}}
-	W_{1} \equiv \{ def(res + ciudades[i].habitantes) \yLuego W_{2 res + ciudades[i].habitantes}^{res} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Evaluando}}}
-	W_{1} \equiv \{ true \yLuego |ciudades| - i - 1 < V_{0} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Entonces}}}
-	W_{1} \equiv \{ |ciudades| - i - 1 < V_{0} \}
-	\shortintertext{\parbox{\textwidth}{\centering \small {Retomando la implicación de la tripla de Hoare de la proposición (d), ya se puede reemplazar la WP por $W_{1}$}}}
-	\{I \land B \land fv = V_{0} \}\\
-     \implica \\
-      \{ |ciudades| - i - 1 < V_{0} \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Si la primera parte de la implicación es verdadera, se puede reemplazar $V_{0}$ por fv}}}
-	\{I \land B \land fv = V_{0} \}\\
-     \implica \\
-      \{ |ciudades| - i - 1 < fv \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Evaluando}}}
-	\{I \land B \land fv = V_{0} \}\\
-     \implica \\
-      \{ |ciudades| - i - 1 < |ciudades| - i \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Operando la desigualdad, puedo restar a ambos lados por $|ciudades| - i$ }}}
-	\{I \land B \land fv = V_{0} \}\\
-     \implica \\
-      \{ - 1 < 0 \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Luego}}}
-	\{I \land B \land fv = V_{0} \}\\
-     \implica \\
-      \{ true \}\\
-\shortintertext{\parbox{\textwidth}{\centering \small {Que es tautología}}}
-\end{align*}
-\indent
-La proposición (e), se prueba de la siguiente manera:
-\begin{align*}
-    \{ I \land |ciudades| - i \leq 0 \} \implica i \geq |ciudades|
-    \shortintertext{\parbox{\textwidth}{\centering \small {Si la primera parte de la implicación es verdadera, se puede ver que  $|ciudades| - i \leq 0$ es verdadero, entonces como}}}
-    |ciudades| - i \leq 0 \equiv i \geq |ciudades|
-    \shortintertext{\parbox{\textwidth}{\centering \small {Tenemos finalmente}}}
-	\{ I \land |ciudades| - i \leq 0 \} \implica true
- \shortintertext{\parbox{\textwidth}{\centering \small {Que es tautología}}}
-\end{align*}
-\indent
-Al haberse probado (d) y (e) queda demostrado que el ciclo finaliza por el teorema de finalización, y por lo tanto, como ya se probó el teorema del invariante, queda probado (2).
-
-\indent
-En conclusión, por monotonía, al haber probado (1), (2) y (3) queda demostrada la correctitud del programa según la lógica de la tripla de Hoare.
 \subsection{}
 Para demostrar que el valor devuelto es mayor a 50.000, definimos una nueva postcondición del programa. 
 \vspace{2,5mm}\\
@@ -345,14 +219,14 @@ Debemos probar la validez de la tripla de Hoare \{P\}S\{Q\}, para eso probaremos
     \item $P_c$ \implica wp(while...,$Q_c$)
     \item $Q_c$ \implica Q
 \end{enumerate}
-Por monotonía, esto nos permite demostrar que P \implica wp(S,Q) es verdadera. Definimos una nueva precondición y postcondición del ciclo, e invariante.
-
-$Q_c \equiv \{\small \displaystyle \sum_{j=0}^{|ciudades|-1} ciudades[j].habitantes > 50.000 \}$\\
-
-$P_c \equiv \{ \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \\ \paraTodo[unalinea]{j}{\ent}{0    \leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \land res=0 \land i=0 \}$\\
-
-$I \equiv \{ 0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes) \land \ \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \\ \paraTodo[unalinea]{j}{\ent}{0    \leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \}$
-
+Por monotonía, esto nos permite demostrar que P \implica wp(S,Q) es verdadera. Definimos una nueva precondición y postcondición del ciclo, e invariante.\\
+\begin{eqnarray}
+    Q_c &\equiv& \{\small \displaystyle \sum_{j=0}^{|ciudades|-1} ciudades[j].habitantes > 50.000\} \notag \\
+    P_c &\equiv& \{ \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ 
+    & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \land res=0 \land i=0 \} \notag \\
+    I &\equiv& \{ 0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes) \land \notag \\
+    & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \paraTodo[unalinea]{j}{\ent}{0 \leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0} \} \notag 
+\end{eqnarray}
 \item 1) P \implica $wp(S_1;S_2, P_c$)\\ \vspace{-10mm}
 
 \begin{eqnarray}
@@ -388,8 +262,8 @@ El cuerpo del ciclo tiene dos instrucciones, que llamaremos $S_c1$ y $S_c2$.
         &\equiv& (0 \leq i < |ciudades| \ \land \ 0 \leq i+1 \leq |ciudades|) \ \yLuego (res= \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \notag \\
         wp(S_c1;S_c2, I)  &\equiv& (0 \leq i <|ciudades|) \yLuego (res= \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \notag \\ & & \existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \notag 
 \end{eqnarray}
-(1) Si despejamos: $res = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes \ - ciudades[i].habitantes = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes$\\
-(2) $(0 \leq i < |ciudades| \ \land \ 0 \leq i+1 \leq |ciudades|)\equiv(0 \leq i < |ciudades| \ \land \ -1 \leq i \leq |ciudades|-1)\\
+(2) Si despejamos: $res = \small \displaystyle \sum_{j=0}^{i} ciudades[j].habitantes \ - ciudades[i].habitantes = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes$\\
+(3) $(0 \leq i < |ciudades| \ \land \ 0 \leq i+1 \leq |ciudades|)\equiv(0 \leq i < |ciudades| \ \land \ -1 \leq i \leq |ciudades|-1)\\
 \implica 0 \leq i <|ciudades|$\\
 Ahora vemos la implicación: \\
 \begin{itemize}
@@ -402,7 +276,7 @@ Ahora vemos la implicación: \\
     I \land \neg B &\equiv& 0 \leq i \leq |ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \notag \\ & &\existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \land \neg(i<|ciudades|) \\
     &\equiv& i=|ciudades| \yLuego (res = \small \displaystyle \sum_{j=0}^{i-1} ciudades[j].habitantes \land \notag \\ & &\existe[unalinea]{k}{\ent}{0 \leq k< |ciudades| \yLuego ciudades[k].habitantes >  50.000 }\land \notag \\ & & \paraTodo[unalinea]{j}{\ent}{0\leq j < |ciudades| \implicaLuego ciudades[j].habitantes \geq 0}) \notag 
  \end{eqnarray}
- (3) $0 \leq i \leq |ciudades| \land \neg(i<|ciudades|)\equiv 0 \leq i \leq |ciudades| \land i\geq |ciudades| \implica i = |ciudades|$\\
+ (4) $0 \leq i \leq |ciudades| \land \neg(i<|ciudades|)\equiv 0 \leq i \leq |ciudades| \land i\geq |ciudades| \implica i = |ciudades|$\\
  Veamos la implicación:
 \begin{itemize}
     \item \parbox[t]{\textwidth}{Como asumimos el antecedente $I \land \neg B$ cierto, podemos reemplazar en la sumatoria.\\ res = $\small \displaystyle \sum_{j=0}^{\textcolor{blue}{|ciudades|}-1} ciudades[j].habitantes$\\
